# gpogitops

./: Export-ADMXtoJSON.ps1  README.md  admx-dictionary.json
admx-mcp-server/: .gitignore  Dockerfile  Dockerfile.github  README.md  claude_desktop_config.json  docker-compose.yml  mcpo_config.json  mcpo_config_docker.json  pyproject.toml  server.py  start_mcpo.sh
admx-mcp-server/app/: __init__.py  config.py  main.py
admx-mcp-server/app/core/: __init__.py  formatters.py  translations.py
admx-mcp-server/app/services/: __init__.py  database_service.py
admx-mcp-server/app/tools/: __init__.py  categories.py  search.py  stats.py
admx-mcp-server/mock-gpo-data/network/: DNS.xml
admx-mcp-server/mock-gpo-data/scripts/: Deploy-GPO.ps1  Setup-Runner.ps1  Verify-GPO.ps1
admx-mcp-server/mock-gpo-data/security/: Firewall.xml  PasswordPolicy.xml  ServerIsolation.xml
admx-mcp-server/tests/: __init__.py  conftest.py  test_database_service.py
gpo-mcp-server/: .env  .gitignore  .woodpecker.yml  README.md  pyproject.toml  server.py
gpo-mcp-server/app/: __init__.py  config.py  main.py
gpo-mcp-server/docs/: cloud-dc-validation-runbook.md  enterprise-roadmap.md
gpo-mcp-server/scripts/: gpo_convert.py  gpo_validate_yaml.py  gpo_whatif.py  validate_xml.py
gpo-mcp-server/tests/: __init__.py  conftest.py  test_backend_change_request_service.py  test_backend_http_server.py  test_config.py  test_gpo_convert.py  test_gpo_validate_yaml.py  test_settings_cache_and_bitbucket.py  test_whatif.py  test_workflow_and_audit.py  test_xml_service.py  test_yaml_service.py
(+1240 files in other folders)
